feat: update youtube links and add images

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>Talking Book - Making Books Less Boring</title>
 
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📚</text></svg>">
+    <link rel="icon" type="image/x-icon" href="images/favicon/favicon.ico">
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -93,7 +93,7 @@
     <header class="bg-primary text-white py-12 shadow-lg">
         <div class="container mx-auto px-6 text-center">
             <div class="flex justify-center items-center mb-4">
-                <img src="https://placehold.co/150x50/FFFFFF/334155?text=Talking+Book&font=Inter" alt="Talking Book Logo" class="h-12 mr-3">
+                <img src="images/logo.png" alt="Talking Book Logo" class="h-12 mr-3">
                 <a href="#" aria-label="Talking Book Home" class="text-4xl font-bold tracking-tight hover:text-secondary transition-colors">Talking Book</a>
             </div>
             <h1 class="text-5xl font-bold mb-3 animate-fade-in-up">Making Books Less Boring</h1>
@@ -137,7 +137,7 @@
                 <article class="bg-white p-6 rounded-xl shadow-lg hover:shadow-2xl transition-shadow duration-300 flex flex-col animate-on-scroll fade-in-up">
                     <div class="mb-4 rounded-md overflow-hidden responsive-iframe-container bg-slate-300">
                          <iframe 
-                            src="https://www.youtube.com/embed/YOUR_OVERVIEW_VIDEO_ID" title="Talking Book - Book Overviews Preview" 
+                            src="https://www.youtube.com/embed/X4d5VVgxmag" title="Talking Book - Book Overviews Preview" 
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                             allowfullscreen
                             loading="lazy">
@@ -145,7 +145,7 @@
                     </div>
                     <h3 class="text-xl font-semibold mb-2 text-primary flex items-center"><i class="fas fa-book-open mr-2 text-secondary" aria-hidden="true"></i>Book Overviews</h3>
                     <p class="text-slate-600 mb-4 flex-grow">Concise summaries covering the entire book, highlighting key concepts and takeaways in an easy-to-digest conversational format.</p>
-                    <a href="https://www.youtube.com/playlist?list=YOUR_OVERVIEWS_PLAYLIST_ID" target="_blank" rel="noopener noreferrer" title="Watch Book Overviews Playlist on YouTube (opens in new tab)" class="mt-auto self-start bg-primary hover:bg-primary-hover text-white font-medium py-2 px-4 rounded-lg transition-colors inline-flex items-center">
+                    <a href="https://www.youtube.com/playlist?list=PL-30PThEjIIoaYJylP3CVSJHAVcsTf3GU" target="_blank" rel="noopener noreferrer" title="Watch Book Overviews Playlist on YouTube (opens in new tab)" class="mt-auto self-start bg-primary hover:bg-primary-hover text-white font-medium py-2 px-4 rounded-lg transition-colors inline-flex items-center">
                         <i class="fas fa-play-circle mr-2" aria-hidden="true"></i> Watch Playlist <i class="fas fa-arrow-right ml-1 text-xs"></i>
                     </a>
                 </article>
@@ -153,7 +153,7 @@
                 <article class="bg-white p-6 rounded-xl shadow-lg hover:shadow-2xl transition-shadow duration-300 flex flex-col animate-on-scroll fade-in-up" style="animation-delay: 0.1s;">
                     <div class="mb-4 rounded-md overflow-hidden responsive-iframe-container bg-slate-300">
                         <iframe 
-                            src="https://www.youtube.com/embed/YOUR_DEEPDIVE_VIDEO_ID" title="Talking Book - Chapter Deep Dives Preview" 
+                            src="https://www.youtube.com/embed/e9vKN7Mppxc" title="Talking Book - Chapter Deep Dives Preview" 
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                             allowfullscreen
                             loading="lazy">
@@ -162,7 +162,7 @@
                     <h3 class="text-xl font-semibold mb-2 text-primary flex items-center"><i class="fas fa-layer-group mr-2 text-secondary" aria-hidden="true"></i>Chapter Deep Dives</h3>
                     <p class="text-slate-600 mb-1 flex-grow">In-depth explorations focusing on specific chapters, breaking down detailed concepts and insights piece by piece.</p>
                     <span class="inline-block bg-amber-100 text-amber-700 text-xs font-semibold px-2 py-1 rounded-full mb-3 self-start">Featured Series:</span>
-                    <a href="https://www.youtube.com/playlist?list=YOUR_DEEPDIVES_PLAYLIST_ID" target="_blank" rel="noopener noreferrer" title="Watch Million Dollar Weekend Deep Dive Playlist on YouTube (opens in new tab)" class="mt-auto self-start bg-primary hover:bg-primary-hover text-white font-medium py-2 px-4 rounded-lg transition-colors inline-flex items-center">
+                    <a href="https://www.youtube.com/playlist?list=PL-30PThEjIIo4S6-ghTlm9WrmHhlD6HXg" target="_blank" rel="noopener noreferrer" title="Watch Million Dollar Weekend Deep Dive Playlist on YouTube (opens in new tab)" class="mt-auto self-start bg-primary hover:bg-primary-hover text-white font-medium py-2 px-4 rounded-lg transition-colors inline-flex items-center">
                         <i class="fas fa-list-ol mr-2" aria-hidden="true"></i> Million Dollar Weekend <i class="fas fa-arrow-right ml-1 text-xs"></i>
                     </a>
                 </article>
@@ -170,7 +170,7 @@
                 <article class="bg-white p-6 rounded-xl shadow-lg hover:shadow-2xl transition-shadow duration-300 flex flex-col animate-on-scroll fade-in-up" style="animation-delay: 0.2s;">
                      <div class="mb-4 rounded-md overflow-hidden responsive-iframe-container bg-slate-300">
                         <iframe 
-                            src="https://www.youtube.com/embed/YOUR_SONG_VIDEO_ID" title="Talking Book - Book Songs Preview" 
+                            src="https://www.youtube.com/embed/tdHC9RMXyR0" title="Talking Book - Book Songs Preview" 
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                             allowfullscreen
                             loading="lazy">
@@ -178,13 +178,13 @@
                     </div>
                     <h3 class="text-xl font-semibold mb-2 text-primary flex items-center"><i class="fas fa-music mr-2 text-secondary" aria-hidden="true"></i>Book Songs</h3>
                     <p class="text-slate-600 mb-4 flex-grow">Creative and catchy musical interpretations of core book concepts, making learning more fun and memorable.</p>
-                    <a href="https://www.youtube.com/playlist?list=YOUR_SONGS_PLAYLIST_ID" target="_blank" rel="noopener noreferrer" title="Listen to Book Songs Playlist on YouTube (opens in new tab)" class="mt-auto self-start bg-primary hover:bg-primary-hover text-white font-medium py-2 px-4 rounded-lg transition-colors inline-flex items-center">
+                    <a href="https://www.youtube.com/playlist?list=PL-30PThEjIIr9RQinhGBrevGC-6zwHo1T" target="_blank" rel="noopener noreferrer" title="Listen to Book Songs Playlist on YouTube (opens in new tab)" class="mt-auto self-start bg-primary hover:bg-primary-hover text-white font-medium py-2 px-4 rounded-lg transition-colors inline-flex items-center">
                         <i class="fas fa-headphones mr-2" aria-hidden="true"></i> Listen to Playlist <i class="fas fa-arrow-right ml-1 text-xs"></i>
                     </a>
                 </article>
 
                 <article class="bg-white p-6 rounded-xl shadow-lg hover:shadow-2xl transition-shadow duration-300 flex flex-col animate-on-scroll fade-in-up" style="animation-delay: 0.3s;">
-                    <img src="https://placehold.co/600x400/334155/FFFFFF?text=AI+Chats&font=Inter" alt="AI Chats Illustration" class="rounded-md mb-4 w-full h-48 object-cover">
+                    <img src="images/telegram_bot.png" alt="AI Chats Illustration" class="rounded-md mb-4 w-full h-[10.3rem] object-cover">
                     <h3 class="text-xl font-semibold mb-2 text-primary flex items-center"><i class="fas fa-comments mr-2 text-secondary" aria-hidden="true"></i>AI Chats</h3>
                     <p class="text-slate-600 mb-1 flex-grow">Engage directly with book content through interactive, text-based conversations with AI representations of the books on platforms like Telegram.</p>
                     <span class="inline-block bg-green-100 text-green-700 text-xs font-semibold px-2 py-1 rounded-full mb-3 self-start">Featured Chat:</span> 
