--- a/index.html
+++ b/index.html
@@ -145,34 +145,34 @@
             <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8">
                 <article class="bg-white dark:bg-dark-card p-6 rounded-xl shadow-lg hover:shadow-2xl transition-all duration-300 flex flex-col motion-safe:hover:-translate-y-1 animate-on-scroll fade-in-up motion-reduce:animate-none">
                     <div class="mb-4 rounded-md overflow-hidden responsive-iframe-container bg-slate-300 dark:bg-slate-600">
-                         <iframe src="YOUR_BOOK_OVERVIEWS_PREVIEW_YOUTUBE_EMBED_URL" title="Talking Book - Book Overviews Preview" allowfullscreen loading="lazy"></iframe>
+                         <iframe src="https://www.youtube.com/embed/X4d5VVgxmag" title="Talking Book - Book Overviews Preview" allowfullscreen loading="lazy"></iframe>
                     </div>
                     <h3 class="text-xl font-semibold mb-2 text-primary dark:text-dark-text-primary flex items-center"><i class="fas fa-book-open mr-2 text-secondary dark:text-dark-secondary-accent" aria-hidden="true"></i>Book Overviews</h3>
                     <p class="text-slate-600 dark:text-dark-text-secondary mb-4 flex-grow">Concise summaries covering the entire book, highlighting key concepts and takeaways.</p>
-                    <a href="YOUR_BOOK_OVERVIEWS_PLAYLIST_URL" target="_blank" rel="noopener noreferrer" title="Watch Book Overviews Playlist on YouTube (opens in new tab)" class="mt-auto self-start bg-primary hover:bg-primary-hover dark:bg-slate-600 dark:hover:bg-slate-500 text-white font-medium py-2 px-4 rounded-lg transition-colors inline-flex items-center focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:ring-primary">
+                    <a href="https://www.youtube.com/playlist?list=PL-30PThEjIIoaYJylP3CVSJHAVcsTf3GU" target="_blank" rel="noopener noreferrer" title="Watch Book Overviews Playlist on YouTube (opens in new tab)" class="mt-auto self-start bg-primary hover:bg-primary-hover dark:bg-slate-600 dark:hover:bg-slate-500 text-white font-medium py-2 px-4 rounded-lg transition-colors inline-flex items-center focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:ring-primary">
                         <i class="fas fa-play-circle mr-2" aria-hidden="true"></i> Watch Playlist <i class="fas fa-arrow-right ml-1 text-xs"></i>
                     </a>
                 </article>
 
                 <article class="bg-white dark:bg-dark-card p-6 rounded-xl shadow-lg hover:shadow-2xl transition-all duration-300 flex flex-col motion-safe:hover:-translate-y-1 animate-on-scroll fade-in-up motion-reduce:animate-none" style="animation-delay: 0.1s;">
                     <div class="mb-4 rounded-md overflow-hidden responsive-iframe-container bg-slate-300 dark:bg-slate-600">
-                        <iframe src="YOUR_CHAPTER_DEEP_DIVES_PREVIEW_YOUTUBE_EMBED_URL" title="Talking Book - Chapter Deep Dives Preview" allowfullscreen loading="lazy"></iframe>
+                        <iframe src="https://www.youtube.com/embed/e9vKN7Mppxc" title="Talking Book - Chapter Deep Dives Preview" allowfullscreen loading="lazy"></iframe>
                     </div>
                     <h3 class="text-xl font-semibold mb-2 text-primary dark:text-dark-text-primary flex items-center"><i class="fas fa-layer-group mr-2 text-secondary dark:text-dark-secondary-accent" aria-hidden="true"></i>Chapter Deep Dives</h3>
                     <p class="text-slate-600 dark:text-dark-text-secondary mb-1 flex-grow">In-depth explorations focusing on specific chapters, breaking down detailed concepts.</p>
                     <span class="inline-block bg-amber-100 text-amber-700 text-xs font-semibold px-2 py-1 rounded-full mb-3 self-start dark:bg-amber-700 dark:text-amber-100">Featured Series:</span>
-                    <a href="YOUR_MILLION_DOLLAR_WEEKEND_PLAYLIST_URL" target="_blank" rel="noopener noreferrer" title="Watch Million Dollar Weekend Deep Dive Playlist (opens in new tab)" class="mt-auto self-start bg-primary hover:bg-primary-hover dark:bg-slate-600 dark:hover:bg-slate-500 text-white font-medium py-2 px-4 rounded-lg transition-colors inline-flex items-center focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:ring-primary">
+                    <a href="https://www.youtube.com/playlist?list=PL-30PThEjIIo4S6-ghTlm9WrmHhlD6HXg" target="_blank" rel="noopener noreferrer" title="Watch Million Dollar Weekend Deep Dive Playlist (opens in new tab)" class="mt-auto self-start bg-primary hover:bg-primary-hover dark:bg-slate-600 dark:hover:bg-slate-500 text-white font-medium py-2 px-4 rounded-lg transition-colors inline-flex items-center focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:ring-primary">
                         <i class="fas fa-list-ol mr-2" aria-hidden="true"></i> Million Dollar Weekend <i class="fas fa-arrow-right ml-1 text-xs"></i>
                     </a>
                 </article>
 
                 <article class="bg-white dark:bg-dark-card p-6 rounded-xl shadow-lg hover:shadow-2xl transition-all duration-300 flex flex-col motion-safe:hover:-translate-y-1 animate-on-scroll fade-in-up motion-reduce:animate-none" style="animation-delay: 0.2s;">
                      <div class="mb-4 rounded-md overflow-hidden responsive-iframe-container bg-slate-300 dark:bg-slate-600">
-                        <iframe src="YOUR_BOOK_SONGS_PREVIEW_YOUTUBE_EMBED_URL" title="Talking Book - Book Songs Preview" allowfullscreen loading="lazy"></iframe>
+                        <iframe src="https://www.youtube.com/embed/tdHC9RMXyR0" title="Talking Book - Book Songs Preview" allowfullscreen loading="lazy"></iframe>
                     </div>
                     <h3 class="text-xl font-semibold mb-2 text-primary dark:text-dark-text-primary flex items-center"><i class="fas fa-music mr-2 text-secondary dark:text-dark-secondary-accent" aria-hidden="true"></i>Book Songs</h3>
                     <p class="text-slate-600 dark:text-dark-text-secondary mb-4 flex-grow">Creative and catchy musical interpretations of core book concepts.</p>
-                    <a href="YOUR_BOOK_SONGS_PLAYLIST_URL" target="_blank" rel="noopener noreferrer" title="Listen to Book Songs Playlist on YouTube (opens in new tab)" class="mt-auto self-start bg-primary hover:bg-primary-hover dark:bg-slate-600 dark:hover:bg-slate-500 text-white font-medium py-2 px-4 rounded-lg transition-colors inline-flex items-center focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:ring-primary">
+                    <a href="https://www.youtube.com/playlist?list=PL-30PThEjIIr9RQinhGBrevGC-6zwHo1T" target="_blank" rel="noopener noreferrer" title="Listen to Book Songs Playlist on YouTube (opens in new tab)" class="mt-auto self-start bg-primary hover:bg-primary-hover dark:bg-slate-600 dark:hover:bg-slate-500 text-white font-medium py-2 px-4 rounded-lg transition-colors inline-flex items-center focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:ring-primary">
                         <i class="fas fa-headphones mr-2" aria-hidden="true"></i> Listen to Playlist <i class="fas fa-arrow-right ml-1 text-xs"></i>
                     </a>
                 </article>
