feat: update youtube subscribe link

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                     </a>
                 </article>
             </div>
-            <p class="mt-10 text-center text-lg text-slate-700 dark:text-dark-text-secondary">Explore the content formats and <a href="YOUR_YOUTUBE_SUBSCRIBE_URL" target="_blank" rel="noopener noreferrer" title="Subscribe to Talking Book on YouTube (opens in new tab)" class="text-secondary dark:text-dark-secondary-accent hover:text-secondary-hover dark:hover:text-amber-400 font-semibold underline focus-visible:ring-1 focus-visible:ring-offset-1 focus-visible:ring-secondary">subscribe on YouTube</a> to never miss an update!</p>
+            <p class="mt-10 text-center text-lg text-slate-700 dark:text-dark-text-secondary">Explore the content formats and <a href="https://www.youtube.com/@TalkingBookYT?sub_confirmation=1" target="_blank" rel="noopener noreferrer" title="Subscribe to Talking Book on YouTube (opens in new tab)" class="text-secondary dark:text-dark-secondary-accent hover:text-secondary-hover dark:hover:text-amber-400 font-semibold underline focus-visible:ring-1 focus-visible:ring-offset-1 focus-visible:ring-secondary">subscribe on YouTube</a> to never miss an update!</p>
         </section>
     </main>
 
