--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
 
     <footer class="bg-darkbackground text-slate-300 pt-16 pb-8 dark:bg-dark-primary-accent dark:text-dark-text-primary">
         <div class="container mx-auto px-6">
-            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 mb-8">
-                <div class="animate-on-scroll fade-in-up motion-reduce:animate-none">
+            <div class="grid md:grid-cols-2 lg:grid-cols-2 gap-8 mb-8">
+                <!--div class="animate-on-scroll fade-in-up motion-reduce:animate-none">
                     <h3 class="text-xl font-semibold mb-3 text-white dark:text-dark-text-primary">Stay Updated</h3>
                     <p class="mb-4 text-slate-400 dark:text-dark-text-secondary">Get notified about new content & insights.</p>
                     <form id="newsletter-form" action="YOUR_FORMSPREE_ENDPOINT_OR_OTHER_SERVICE" method="post" novalidate aria-busy="false">
@@ -208,13 +208,13 @@
                         </div>
                         <div id="newsletter-feedback" class="mt-2 text-sm" aria-live="polite"></div>
                     </form>
-                </div>
+                </div-->
 
                 <div class="animate-on-scroll fade-in-up motion-reduce:animate-none md:text-left lg:col-span-1" style="animation-delay: 0.1s;">
                     <h3 class="text-xl font-semibold mb-3 text-white dark:text-dark-text-primary">Connect & Explore</h3>
                     <nav class="social-links mb-4" aria-label="Social media links">
                         <a href="https://www.youtube.com/@TalkingBookYT" target="_blank" rel="noopener noreferrer" title="Talking Book on YouTube" aria-label="YouTube" class="text-slate-400 hover:text-secondary dark:hover:text-dark-secondary-accent text-2xl mr-4 transition-colors"><i class="fab fa-youtube"></i></a>
-                        <a href="https://twitter.com/YourTwitterHandle" target="_blank" rel="noopener noreferrer" title="Talking Book on Twitter" aria-label="Twitter" class="text-slate-400 hover:text-secondary dark:hover:text-dark-secondary-accent text-2xl mr-4 transition-colors"><i class="fab fa-twitter"></i></a>
+                        <a href="#" target="_blank" rel="noopener noreferrer" title="Talking Book on Twitter" aria-label="Twitter" class="text-slate-400 hover:text-secondary dark:hover:text-dark-secondary-accent text-2xl mr-4 transition-colors"><i class="fab fa-twitter"></i></a>
                         <a href="mailto:limcheekin@vobject.com" title="Contact Talking Book via Email" aria-label="Email" class="text-slate-400 hover:text-secondary dark:hover:text-dark-secondary-accent text-2xl transition-colors"><i class="fas fa-envelope"></i></a>
                     </nav>
                      <nav class="footer-links" aria-label="Footer legal links">
